klee/examples/bench_test/klee-last/test000001.pc
array model_version[4] : w32 -> w8 = symbolic
(query [(Eq 1
            (ReadLSB w32 0 model_version))]
       false)
